ci: install pytest-cov with CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script:
   - pip install google-compute-engine
   - pip install pytest==5.0.1
+  - pip install pytest-cov==2.7.1
   - pip install -e .
   - pytest --cov=fancy_nlp tests/
 after_success:
