--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,6 @@ termcolor==1.1.0
 urllib3==1.25.7
 Werkzeug==0.16.0
 wrapt==1.11.2
-git+https://www.github.com/bojone/bert4keras.git
+ber4keras==0.5.0
 tensorflow-addons==0.8.1
 seqeval==0.0.12
